@@ -1,3 +1,8 @@
+17
+
+ENHANCEMENT:
+* Chain tool behaves like magic pen: you can make loops and closed paths
+
 16
 
 ENHANCEMENT:
